<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">

    <HorizontalScrollView
        android:id="@+id/sv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvNews"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:src="@drawable/bali3" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/news1"
                            android:layout_marginTop="3dp"
                            android:textColor="#212121"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_light"
                            android:layout_gravity="center"
                            android:layout_marginStart="4dp"
                            android:text="@string/news_desc1"
                            android:textColor="#212121"
                            android:textSize="10sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvNews2"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:src="@drawable/lombok" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/news2"
                            android:layout_marginTop="3dp"
                            android:textColor="#212121"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_light"
                            android:layout_gravity="center"
                            android:layout_marginStart="4dp"
                            android:text="@string/news_desc2"
                            android:textColor="#212121"
                            android:textSize="10sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvNews3"
                    android:layout_width="150dp"
                    android:layout_height="170dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:src="@drawable/komodo" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_bold"
                            android:text="@string/news3"
                            android:layout_marginTop="3dp"
                            android:textColor="#212121"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_light"
                            android:layout_gravity="center"
                            android:layout_marginStart="4dp"
                            android:text="@string/news_desc3"
                            android:textColor="#212121"
                            android:textSize="10sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>